crates/kul-lsp/src/features/snapshots/kul_lsp__features__document_symbol__tests__snapshot_nuclear_family.snap
---
source: crates/kul-lsp/src/features/document_symbol.rs
expression: syms
---
[
  {
    "name": "Alice Sharma",
    "detail": "b. 1950",
    "kind": 13,
    "range": {
      "start": {
        "line": 6,
        "character": 0
      },
      "end": {
        "line": 6,
        "character": 65
      }
    },
    "selectionRange": {
      "start": {
        "line": 6,
        "character": 7
      },
      "end": {
        "line": 6,
        "character": 12
      }
    }
  },
  {
    "name": "Bob Sharma",
    "detail": "b. 1948",
    "kind": 13,
    "range": {
      "start": {
        "line": 7,
        "character": 0
      },
      "end": {
        "line": 7,
        "character": 65
      }
    },
    "selectionRange": {
      "start": {
        "line": 7,
        "character": 7
      },
      "end": {
        "line": 7,
        "character": 10
      }
    }
  },
  {
    "name": "Carol Sharma",
    "detail": "b. 1975",
    "kind": 13,
    "range": {
      "start": {
        "line": 8,
        "character": 0
      },
      "end": {
        "line": 9,
        "character": 19
      }
    },
    "selectionRange": {
      "start": {
        "line": 8,
        "character": 7
      },
      "end": {
        "line": 8,
        "character": 12
      }
    },
    "children": [
      {
        "name": "birth m_alice_bob",
        "kind": 8,
        "range": {
          "start": {
            "line": 9,
            "character": 2
          },
          "end": {
            "line": 9,
            "character": 19
          }
        },
        "selectionRange": {
          "start": {
            "line": 9,
            "character": 2
          },
          "end": {
            "line": 9,
            "character": 7
          }
        }
      }
    ]
  },
  {
    "name": "Alice Sharma & Bob Sharma",
    "detail": "1972",
    "kind": 24,
    "range": {
      "start": {
        "line": 11,
        "character": 0
      },
      "end": {
        "line": 11,
        "character": 48
      }
    },
    "selectionRange": {
      "start": {
        "line": 11,
        "character": 9
      },
      "end": {
        "line": 11,
        "character": 20
      }
    }
  }
]
