crates/kul-lsp/src/features/snapshots/kul_lsp__features__document_symbol__tests__snapshot_polygamous_family.snap
---
source: crates/kul-lsp/src/features/document_symbol.rs
expression: syms
---
[
  {
    "name": "Alice Sharma",
    "detail": "b. 1950",
    "kind": 13,
    "range": {
      "start": {
        "line": 6,
        "character": 0
      },
      "end": {
        "line": 6,
        "character": 66
      }
    },
    "selectionRange": {
      "start": {
        "line": 6,
        "character": 7
      },
      "end": {
        "line": 6,
        "character": 12
      }
    }
  },
  {
    "name": "Devraj Kumar",
    "detail": "b. 1948",
    "kind": 13,
    "range": {
      "start": {
        "line": 7,
        "character": 0
      },
      "end": {
        "line": 7,
        "character": 66
      }
    },
    "selectionRange": {
      "start": {
        "line": 7,
        "character": 7
      },
      "end": {
        "line": 7,
        "character": 13
      }
    }
  },
  {
    "name": "Meera",
    "detail": "b. 1955",
    "kind": 13,
    "range": {
      "start": {
        "line": 8,
        "character": 0
      },
      "end": {
        "line": 8,
        "character": 66
      }
    },
    "selectionRange": {
      "start": {
        "line": 8,
        "character": 7
      },
      "end": {
        "line": 8,
        "character": 12
      }
    }
  },
  {
    "name": "Priya Kumar",
    "detail": "b. 1994",
    "kind": 13,
    "range": {
      "start": {
        "line": 10,
        "character": 0
      },
      "end": {
        "line": 11,
        "character": 22
      }
    },
    "selectionRange": {
      "start": {
        "line": 10,
        "character": 7
      },
      "end": {
        "line": 10,
        "character": 12
      }
    },
    "children": [
      {
        "name": "birth m_alice_devraj",
        "kind": 8,
        "range": {
          "start": {
            "line": 11,
            "character": 2
          },
          "end": {
            "line": 11,
            "character": 22
          }
        },
        "selectionRange": {
          "start": {
            "line": 11,
            "character": 2
          },
          "end": {
            "line": 11,
            "character": 7
          }
        }
      }
    ]
  },
  {
    "name": "Devraj Kumar & Meera",
    "detail": "1990",
    "kind": 24,
    "range": {
      "start": {
        "line": 13,
        "character": 0
      },
      "end": {
        "line": 13,
        "character": 55
      }
    },
    "selectionRange": {
      "start": {
        "line": 13,
        "character": 9
      },
      "end": {
        "line": 13,
        "character": 23
      }
    }
  },
  {
    "name": "Alice Sharma & Devraj Kumar",
    "detail": "1992",
    "kind": 24,
    "range": {
      "start": {
        "line": 14,
        "character": 0
      },
      "end": {
        "line": 14,
        "character": 55
      }
    },
    "selectionRange": {
      "start": {
        "line": 14,
        "character": 9
      },
      "end": {
        "line": 14,
        "character": 23
      }
    }
  }
]
