crates/kul-lsp/src/features/snapshots/kul_lsp__features__document_symbol__tests__snapshot_three_generations.snap
---
source: crates/kul-lsp/src/features/document_symbol.rs
expression: syms
---
[
  {
    "name": "Ramesh Sharma",
    "detail": "1925–2005",
    "kind": 13,
    "range": {
      "start": {
        "line": 21,
        "character": 0
      },
      "end": {
        "line": 21,
        "character": 84
      }
    },
    "selectionRange": {
      "start": {
        "line": 21,
        "character": 7
      },
      "end": {
        "line": 21,
        "character": 13
      }
    }
  },
  {
    "name": "Sita Sharma",
    "detail": "1928–2010",
    "kind": 13,
    "range": {
      "start": {
        "line": 22,
        "character": 0
      },
      "end": {
        "line": 22,
        "character": 84
      }
    },
    "selectionRange": {
      "start": {
        "line": 22,
        "character": 7
      },
      "end": {
        "line": 22,
        "character": 11
      }
    }
  },
  {
    "name": "Ramesh Sharma & Sita Sharma",
    "detail": "1948",
    "kind": 24,
    "range": {
      "start": {
        "line": 24,
        "character": 0
      },
      "end": {
        "line": 24,
        "character": 52
      }
    },
    "selectionRange": {
      "start": {
        "line": 24,
        "character": 9
      },
      "end": {
        "line": 24,
        "character": 22
      }
    }
  },
  {
    "name": "Alice Sharma",
    "detail": "b. 1950",
    "kind": 13,
    "range": {
      "start": {
        "line": 27,
        "character": 0
      },
      "end": {
        "line": 28,
        "character": 21
      }
    },
    "selectionRange": {
      "start": {
        "line": 27,
        "character": 7
      },
      "end": {
        "line": 27,
        "character": 12
      }
    },
    "children": [
      {
        "name": "birth m_ramesh_sita",
        "kind": 8,
        "range": {
          "start": {
            "line": 28,
            "character": 2
          },
          "end": {
            "line": 28,
            "character": 21
          }
        },
        "selectionRange": {
          "start": {
            "line": 28,
            "character": 2
          },
          "end": {
            "line": 28,
            "character": 7
          }
        }
      }
    ]
  },
  {
    "name": "Bob Sharma",
    "detail": "1948–2020",
    "kind": 13,
    "range": {
      "start": {
        "line": 29,
        "character": 0
      },
      "end": {
        "line": 29,
        "character": 82
      }
    },
    "selectionRange": {
      "start": {
        "line": 29,
        "character": 7
      },
      "end": {
        "line": 29,
        "character": 10
      }
    }
  },
  {
    "name": "Alice Sharma & Bob Sharma",
    "detail": "1972–1990",
    "kind": 24,
    "range": {
      "start": {
        "line": 31,
        "character": 0
      },
      "end": {
        "line": 31,
        "character": 84
      }
    },
    "selectionRange": {
      "start": {
        "line": 31,
        "character": 9
      },
      "end": {
        "line": 31,
        "character": 20
      }
    }
  },
  {
    "name": "Carol Sharma",
    "detail": "b. 1975",
    "kind": 13,
    "range": {
      "start": {
        "line": 34,
        "character": 0
      },
      "end": {
        "line": 35,
        "character": 19
      }
    },
    "selectionRange": {
      "start": {
        "line": 34,
        "character": 7
      },
      "end": {
        "line": 34,
        "character": 12
      }
    },
    "children": [
      {
        "name": "birth m_alice_bob",
        "kind": 8,
        "range": {
          "start": {
            "line": 35,
            "character": 2
          },
          "end": {
            "line": 35,
            "character": 19
          }
        },
        "selectionRange": {
          "start": {
            "line": 35,
            "character": 2
          },
          "end": {
            "line": 35,
            "character": 7
          }
        }
      }
    ]
  },
  {
    "name": "Ravi Sharma",
    "detail": "b. ~1980",
    "kind": 13,
    "range": {
      "start": {
        "line": 36,
        "character": 0
      },
      "end": {
        "line": 37,
        "character": 40
      }
    },
    "selectionRange": {
      "start": {
        "line": 36,
        "character": 7
      },
      "end": {
        "line": 36,
        "character": 11
      }
    },
    "children": [
      {
        "name": "adoption m_alice_bob",
        "detail": "1985",
        "kind": 8,
        "range": {
          "start": {
            "line": 37,
            "character": 2
          },
          "end": {
            "line": 37,
            "character": 40
          }
        },
        "selectionRange": {
          "start": {
            "line": 37,
            "character": 2
          },
          "end": {
            "line": 37,
            "character": 10
          }
        }
      }
    ]
  }
]
